# AidOSv5

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  STYLE.md  layout.sfdisk  run-toolchain.sh  toolchain.cmake
.github/workflows/: style.yml
asm/: prologue.inc
fuzz/: CMakeLists.txt  fuzz_mbr.c
include/hal/: io.hpp
include/shared/: acpi.hpp  pci.hpp
include/std/: stdbool.h  stddef.h  stdint.h
src/: CMakeLists.txt  mbr.asm
src/bootloader/stage1/: CMakeLists.txt
src/bootloader/stage1/x86_64/: linker.ld  stage1.asm
src/bootloader/stage2/: CMakeLists.txt  entry.asm  header.asm  linker.ld  stage2_init.cpp  stage2_stub.c
src/bootloader/stage2/arch/x86_64/: crti.asm  crtn.asm  data_grab.asm  entry.asm  init32.asm  init64.asm
src/hal/: CMakeLists.txt
src/hal/x86_64/: io.cpp
src/kernel/: CMakeLists.txt  kernel_stub.c
src/shared/: CMakeLists.txt  pci.cpp  shared_example.c
src/shared/include/shared/: shared.h
tests/: CMakeLists.txt  tests_main.c  tests_shared.c
toolchains/: x86_64-elf-gcc.cmake
tools/: asm_lint.sh  build_fuzz_afl.sh  image_gen.sh
